sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__hidden_singles_base2.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
expression: "TransportDeductions::from(deductions)"
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 2
    actions:
      - position:
          row: 0
          column: 1
        setValue: 2
  - reasons:
      - position:
          row: 1
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 2
        setValue: 2
  - reasons:
      - position:
          row: 2
          column: 3
        candidates:
          - 4
    actions:
      - position:
          row: 2
          column: 3
        setValue: 4
  - reasons:
      - position:
          row: 3
          column: 0
        candidates:
          - 4
    actions:
      - position:
          row: 3
          column: 0
        setValue: 4
