sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__hidden_singles_base3.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
expression: "TransportDeductions::from(deductions)"
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 4
        candidates:
          - 8
    actions:
      - position:
          row: 0
          column: 4
        setValue: 8
  - reasons:
      - position:
          row: 3
          column: 8
        candidates:
          - 6
    actions:
      - position:
          row: 3
          column: 8
        setValue: 6
  - reasons:
      - position:
          row: 5
          column: 5
        candidates:
          - 4
    actions:
      - position:
          row: 5
          column: 5
        setValue: 4
  - reasons:
      - position:
          row: 8
          column: 6
        candidates:
          - 4
    actions:
      - position:
          row: 8
          column: 6
        setValue: 4
